--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -118,9 +118,20 @@
                 android:background="@color/grey_200"/>
 
             <TextView
-                android:id="@+id/txt_edit_password"
+                android:id="@+id/txt_edit_children_age"
                 android:textColor="@android:color/holo_blue_dark"
                 android:layout_below="@+id/txt1"
+                android:layout_marginTop="12dp"
+                android:text="Ubah Umur Anak"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="12dp" />
+
+
+            <TextView
+                android:id="@+id/txt_edit_password"
+                android:textColor="@android:color/holo_blue_dark"
+                android:layout_below="@+id/txt_edit_children_age"
                 android:layout_marginTop="12dp"
                 android:text="@string/txt_edit_password"
                 android:layout_width="match_parent"
