--- a/app/src/main/res/layout/activity_detail_remainder.xml
+++ b/app/src/main/res/layout/activity_detail_remainder.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.reminder.DetailReminderActivity">
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -19,61 +19,51 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
         </android.support.v7.widget.Toolbar>
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:textColorHint="#c5c5c5">
-            <EditText
-                android:id="@+id/et_reminder_title"
-                android:inputType="textCapWords"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/text_reminder_title"
-                android:enabled="false"
-                android:textColor="@color/edittextselectorcolor" />
-        </android.support.design.widget.TextInputLayout>
+       <TextView
+           android:id="@+id/tv_reminder_title"
+           android:textColor="@android:color/black"
+           android:textStyle="bold"
+           android:textSize="30sp"
+           android:textAlignment="center"
+           android:text="@string/text_reminder_title"
+           android:layout_below="@+id/toolbar"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content" />
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:textColorHint="#c5c5c5">
-            <EditText
-                android:id="@+id/et_reminder_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/text_reminder_description"
-                android:enabled="false"
-                android:textColor="@color/edittextselectorcolor"/>
-        </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/tv_reminder_description"
+            android:textColor="@android:color/black"
             android:layout_margin="10dp"
-            android:textColorHint="#c5c5c5">
-            <EditText
-                android:id="@+id/et_reminder_yes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/text_reminder_yes"
-                android:enabled="false"
-                android:textColor="@color/edittextselectorcolor"/>
-        </android.support.design.widget.TextInputLayout>
+            android:textSize="15sp"
+            android:text="@string/text_reminder_title"
+            android:layout_below="@+id/tv_reminder_title"
+            android:layout_above="@+id/ll_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-        <android.support.design.widget.TextInputLayout
+        <LinearLayout
+            android:id="@+id/ll_button"
+            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:textColorHint="#c5c5c5">
-            <EditText
-                android:id="@+id/et_reminder_no"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/btn_reminder_yes"
+                android:layout_weight="1"
+                android:background="@color/colorGreen500"
+                android:text="Ya"
+                android:textColor="@android:color/white"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/text_reminder_no"
-                android:enabled="false"
-                android:textColor="@color/edittextselectorcolor"/>
-        </android.support.design.widget.TextInputLayout>
-    </LinearLayout>
+                android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/btn_reminder_no"
+                android:layout_weight="1"
+                android:background="@color/colorRed500"
+                android:text="Tidak"
+                android:textColor="@android:color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
