--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -98,11 +98,20 @@
                     android:layout_marginRight="8dp"/>
 
             </RelativeLayout>
+            <Spinner
+                android:id="@+id/spn_children_age"
+                android:layout_below="@id/rl_password"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginTop="20dp"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
 
+            </Spinner>
 
             <Button
                 android:id="@+id/btn_register"
-                android:layout_below="@id/rl_password"
+                android:layout_below="@id/spn_children_age"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/btn_login"
