--- a/app/src/main/res/layout/item_card_view_reminder.xml
+++ b/app/src/main/res/layout/item_card_view_reminder.xml
@@ -5,8 +5,7 @@
     android:layout_margin="10dp"
     android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_margin="8dp"
         android:layout_width="match_parent"
@@ -14,17 +13,22 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_marginLeft="15dp"
             android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/tv_user_time_upload"
-                android:textColor="@android:color/black"
-                android:text="@string/text_tips_title"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/tv_user_time_upload"
+                    android:textColor="@android:color/black"
+                    android:text="@string/text_tips_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/tv_reminder_title"
@@ -48,29 +52,30 @@
 
         </LinearLayout>
         <LinearLayout
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <Button
                 android:id="@+id/btn_reminder_yes"
                 android:layout_weight="1"
-                android:layout_margin="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
                 android:background="@color/colorGreen500"
-                android:text="yes"
+                android:text="Ya"
                 android:textColor="@android:color/white"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="30dp" />
             <Button
                 android:id="@+id/btn_reminder_no"
                 android:layout_weight="1"
-                android:layout_margin="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
                 android:background="@color/colorRed500"
-
-                android:text="no"
+                android:text="Tidak"
                 android:textColor="@android:color/white"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="30dp" />
         </LinearLayout>
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
