--- a/app/src/main/res/layout/post_item_list_view.xml
+++ b/app/src/main/res/layout/post_item_list_view.xml
@@ -88,6 +88,15 @@
                 android:layout_toStartOf="@+id/authorImageView"
                 android:layout_toLeftOf="@+id/authorImageView" />
 
+            <ImageView
+                android:id="@+id/img_delete_timeline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="10dp"
+                android:layout_below="@+id/detailsTextView"
+                android:src="@drawable/ic_delete_black_24dp"
+                android:layout_alignParentRight="true" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
