--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,7 +18,8 @@
 
     <dimen name="post_detail_image_height">250dp</dimen>
     <dimen name="post_author_image_side">80dp</dimen>
-    <dimen name="post_author_image_margin">210dp</dimen> <!-- (post_detail_image_height - post_author_image_side / 2), for centering by post image bottom line-->
+    <dimen name="post_author_image_margin">210dp
+    </dimen> <!-- (post_detail_image_height - post_author_image_side / 2), for centering by post image bottom line-->
 
     <dimen name="post_list_item_image_height">200dp</dimen>
     <dimen name="post_list_item_author_image_side">80dp</dimen>
@@ -51,4 +52,7 @@
     <dimen name="post_card_content_padding_left">11dp</dimen>
 
     <dimen name="post_counter_radius">16dp</dimen>
+    <dimen name="app_bar_height">250dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
