fix ui adding commentar feature adding delete commentar adding delete timeline adding detail user profile who post timeline you can see list of your posted timeline

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#4A148C</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#FF3D00</color>
+    <color name="colorPrimaryDark">#FF3D00</color>
+    <color name="colorAccent">#FF3D00</color>
     <color name="white">#ffffff</color>
     <color name="purple_50">#F3E5F5</color>
     <color name="purple_100">#E1BEE7</color>
