--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbarlayout"
         android:layout_width="match_parent"
-        android:background="@color/purple_800"
+        android:background="@color/colorPrimary"
         android:layout_height="?attr/actionBarSize"
         android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -34,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/MyCustomTabLayout"
-        android:background="@color/purple_700"/>
+        android:background="@color/colorAccent"/>
 
      <android.support.v4.view.ViewPager
         android:id="@+id/pager"
