--- a/app/src/main/res/layout/post_item_list_view.xml
+++ b/app/src/main/res/layout/post_item_list_view.xml
@@ -55,8 +55,10 @@
                 android:layout_alignParentStart="true"
                 android:layout_toStartOf="@+id/authorImageView"
                 android:ellipsize="end"
+                android:textSize="17sp"
                 android:maxLines="1"
-                android:textAppearance="@style/TextAppearance.Title"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
                 android:layout_alignParentLeft="true"
                 android:layout_toLeftOf="@+id/authorImageView" />
 
