--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/coordinator"
-    android:background="@drawable/bg_login">
+    android:background="@drawable/login_bg">
 
     <FrameLayout
         android:id="@+id/frame_container"
@@ -61,7 +61,7 @@
                 android:layout_below="@id/password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_login"
+                android:background="@drawable/login_btn"
                 android:text="@string/btn_login"
                 android:layout_centerHorizontal="true"
                 android:textColor="@color/white"
