--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -18,7 +18,7 @@
             <android.support.design.widget.AppBarLayout
                 android:id="@+id/appbarlayout"
                 android:layout_width="match_parent"
-                android:background="@color/purple_800"
+                android:background="@color/white"
                 android:layout_height="?attr/actionBarSize"
                 android:fitsSystemWindows="true"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
@@ -26,6 +26,7 @@
                         android:id="@+id/toolbar"
                         android:layout_width="match_parent"
                         android:layout_height="?attr/actionBarSize"
+                        app:theme="@style/ThemeOverlay.AppCompat.Light"
                         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
             </android.support.design.widget.AppBarLayout>
 
