--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,8 +2,8 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/coordinator"
-    android:background="@drawable/login_bg">
+    android:background="@color/white"
+    android:id="@+id/coordinator">
 
     <FrameLayout
         android:id="@+id/frame_container"
@@ -20,7 +20,7 @@
                 android:layout_height="100dp"
                 android:layout_marginTop="70dp"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/owl"/>
+                android:src="@drawable/logo"/>
 
             <EditText
                 android:id="@+id/username"
@@ -35,8 +35,8 @@
                 android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                 android:drawablePadding="15dp"
                 android:hint="@string/username"
-                android:textColor="@color/white"
-                android:textColorHint="@color/purple_100"
+                android:textColor="@color/grey_800"
+                android:textColorHint="@color/grey_500"
                 android:background="@drawable/bg_input"/>
 
             <EditText
@@ -52,8 +52,8 @@
                 android:drawableLeft="@drawable/ic_lock_black_24dp"
                 android:drawablePadding="15dp"
                 android:hint="@string/password"
-                android:textColor="@color/white"
-                android:textColorHint="@color/purple_100"
+                android:textColor="@color/grey_800"
+                android:textColorHint="@color/grey_500"
                 android:background="@drawable/bg_input"/>
 
             <Button
@@ -78,7 +78,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey_800"
                     android:text="@string/dont_have_account"/>
 
                 <TextView
@@ -86,7 +86,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="6dp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/grey_800"
                     android:textStyle="bold"
                     android:text="Daftar"/>
             </LinearLayout>
