--- a/app/src/main/res/layout/create_post_activity.xml
+++ b/app/src/main/res/layout/create_post_activity.xml
@@ -48,6 +48,7 @@
                 android:id="@+id/titleEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:hint="@string/hint_title"
                 android:inputType="textMultiLine" />
 
