--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF3D00</color>
-    <color name="colorPrimaryDark">#FF3D00</color>
-    <color name="colorAccent">#FF3D00</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#EEEEEE</color>
+    <color name="colorAccent">#616161</color>
     <color name="white">#ffffff</color>
     <color name="purple_50">#F3E5F5</color>
+    <color name="orange_100">#FFCCBC</color>
+    <color name="orange_800">#EF6C00</color>
     <color name="purple_100">#E1BEE7</color>
     <color name="purple_800">#6A1B9A</color>
     <color name="purple_700">#7B1FA2</color>
@@ -14,6 +16,7 @@
     <color name="grey_500">#a4a4a4</color>
     <color name="grey_100">#F5F5F5</color>
     <color name="grey_700">#616161</color>
+    <color name="grey_800">#424242</color>
     <color name="transparent">#00000000</color>
     <color name="colorRed500">#F44336</color>
     <color name="colorGreen500">#4CAF50</color>
