--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -54,6 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/large_intrinsic_padding"
         android:clickable="true"
+        app:backgroundTint="@color/colorRed500"
         android:src="@drawable/ic_add_black_24dp"
         android:layout_gravity="bottom|right" />
 
