--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
                 android:layout_height="100dp"
                 android:layout_marginTop="70dp"
                 android:layout_centerHorizontal="true"
-                android:src="@drawable/logo"/>
+                android:src="@drawable/goparlogo1"/>
 
             <EditText
                 android:id="@+id/username"
