--- a/app/src/main/res/layout/activity_detail_tips.xml
+++ b/app/src/main/res/layout/activity_detail_tips.xml
@@ -18,28 +18,39 @@
             android:theme="@style/ThemeOverlay.AppCompat.Light"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
         </android.support.v7.widget.Toolbar>
-
-        <TextView
-            android:id="@+id/tv_tips_title"
-            android:textColor="@android:color/black"
-            android:textStyle="bold"
-            android:textSize="30sp"
-            android:textAlignment="center"
-            android:text="@string/text_tips_title"
+        <ScrollView
             android:layout_below="@+id/toolbar"
+            android:layout_above="@+id/ll_button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tv_tips_title"
+                    android:textColor="@android:color/black"
+                    android:textStyle="bold"
+                    android:textSize="30sp"
+                    android:textAlignment="center"
+                    android:text="@string/text_tips_title"
+                    android:layout_below="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
 
-        <TextView
-            android:id="@+id/tv_tips_description"
-            android:textColor="@android:color/black"
-            android:layout_margin="10dp"
-            android:textSize="15sp"
-            android:text="@string/text_tips_description"
-            android:layout_below="@+id/tv_tips_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+                <TextView
+                    android:id="@+id/tv_tips_description"
+                    android:textColor="@android:color/black"
+                    android:layout_margin="10dp"
+                    android:textSize="15sp"
+                    android:text="@string/text_tips_description"
+                    android:layout_below="@+id/tv_tips_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+        </ScrollView>
+
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
