--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -42,9 +42,13 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_centerHorizontal="true"
                     android:src="@drawable/goparlogo1"/>
-
                 <TextView
-                    android:text="Go-Par Team"
+                    android:text="Dosen pembimbing: Salma, S.Psi, M.Psi"
+                    android:textAlignment="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:text="\nGo-Par Team"
                     android:textAlignment="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -77,7 +81,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:text="Team Pengembang Aplikasi"
+                    android:text="Team Pendukung"
                     android:textAlignment="center"
                     android:layout_marginTop="20dp"
                     android:layout_width="match_parent"
@@ -96,14 +100,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:text="Team Desainer"
-                    android:textAlignment="center"
-                    android:layout_marginTop="20dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:text="1. Alfin Faidz Ramdhani"
+                    android:text="3. Alfin Faidz Ramdhani"
                     android:textAlignment="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
