--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/perkembangan_anak"
+        android:orderInCategory="100"
+        app:showAsAction="never"
+        android:title="Perkembangan Anak" />
+    <item
         android:id="@+id/akun"
         android:orderInCategory="100"
         app:showAsAction="never"
