--- a/app/src/main/res/layout/item_card_view_children_development_result.xml
+++ b/app/src/main/res/layout/item_card_view_children_development_result.xml
@@ -23,24 +23,26 @@
             android:background="@android:color/black"
             android:layout_width="match_parent"
             android:layout_height="2dp"/>
-
         <TextView
             android:id="@+id/tv_ddtk_description"
-            android:layout_below="@id/line"
+            android:layout_below="@+id/line"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:text="DDTK Description"
-            android:layout_toLeftOf="@id/cb_ddtk"
+            android:layout_toLeftOf="@id/img_check"
+            android:layout_marginRight="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <CheckBox
-            android:id="@+id/cb_ddtk"
+        <ImageView
+            android:id="@+id/img_check"
+            android:src="@drawable/check"
+            android:layout_below="@+id/line"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/line"
+            android:layout_centerVertical="true"
             android:maxLines="2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
